--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -4,32 +4,28 @@
     font-size: 2.5em;
     font-weight: 600;
     color: var(--font-blk);
-    padding-top: 5%;
-    padding-bottom: 5%;
     text-align: center;
 }
 
 .contact-info {
-    width: 100%;
-    height: auto;
-    display: grid;
-    align-items: center;
+    padding: 75px 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
     background-color: #f7fff7;
 }
 
 .contact-in {
     /* width: 80%; */
-    height: auto;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 2%;
     display: flex;
-    /* flex-wrap: wrap; */
     padding: 20px;
     border-radius: 10px;
     background-color: white;
     box-shadow: 0px 0px 10px 0px #666;
     gap: 20px;
+    width: 80%;
 }
 
 .contact-map {
@@ -45,11 +41,10 @@
 }
 
 .contact-form {
-    position: relative;
-    width: 100%;
-    height: auto;
-    /* padding-left: 20px; */
     flex: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .form-input {
@@ -60,7 +55,6 @@
     border-radius: 5px;
     border: 1px solid rgb(15, 22, 19);
     outline: none;
-    margin-bottom: 20px;
     padding: 15px;
 }
 
@@ -80,7 +74,6 @@
     font-size: 17px;
     border: 1px solid rgb(15, 22, 19);
     outline: none;
-    margin-bottom: 20px;
     padding: 15px;
 }
 
@@ -100,7 +93,7 @@ form ::placeholder {
 .contact-form-button {
     font-size: 20px;
     height: 50px;
-    width: 100%;
+    /* width: 100%; */
     border: none;
     border-radius: 5px;
     background-color: #6ba7b8;
@@ -167,10 +160,11 @@ form ::placeholder {
 
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 450px) {
     .contact-in {
         padding: 20px 0px;
         border-radius: 2px;
+        width: 100%;
     }
 
     .form-input {
