--- a/common/css/nav.scss
+++ b/common/css/nav.scss
@@ -1,6 +1,8 @@
 // NARBAR CSS STARTS
 nav {
 	position: sticky;
+	display: flex;
+	justify-content: space-between;
 	z-index: 10;
 	left: 0;
 	right: 0;
@@ -10,13 +12,21 @@ nav {
 	background-color: rgb(255, 255, 255);
 }
 nav .logo {
-	float: left;
-	width: 75px;
-	display: flex;
-	align-items: center;
+	// float: left;
+	height: 70px;
+	padding: 10px 0px;
 }
+
+@media screen and (max-width: 500px) {
+	.logo{
+		padding: 10px 10px;
+	}
+	.sakec-logo{
+		display: none;
+	}
+}
+
 nav .links {
-	float: right;
 	padding: 0;
 	margin: 0;
 	height: 100%;
