--- a/team/css/style.css
+++ b/team/css/style.css
@@ -178,631 +178,142 @@ section {
 
 }
 
-/* .team-heading:hover{
-  transition: ease-in-out 0.5s;
-  border-top: 3px solid rgba(8,255,8);
-  border-bottom: 3px solid rgba(8,255,8);
-} */
-.member-box {
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-  background-color: #ffffff;
-  position: relative;
+.container {
+  width: 900px;
+  margin: 0px auto;
+}
+
+/* Float three columns side by side */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 0 10px;
+}
+
+/* Remove extra left and right margins, due to padding */
+.row {
+  margin: 20px -5px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 700px) {
+
+  .container {
+    width: 100%;
+  }
+
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 5px;
+  text-align: center;
+  background-color: #fff;
+  border-radius: 10px;
   cursor: pointer;
 }
 
-.member-img {
-  width: 300px;
-  height: 500px;
+.card .profile {
+  border-radius: 10px;
+  transition: 0.5s;
+}
+
+.card:hover .profile {
+  transform: scale(1.4);
+  border-top-right-radius: 50px;
+  border-top-left-radius: 50px;
+}
+
+.card .content {
+  width: 100%;
+  height: 100%;
   position: relative;
+  overflow: hidden;
 }
 
-.member-img img {
-  width: 100%;
-  height: 100%;
-  object-position: center;
-  object-fit: cover;
-  background: #f4d8bf;
-}
-
-.hover-img {
+.card .content .back {
   position: absolute;
-  left: 0px;
-  top: 0px;
   width: 100%;
   height: 100%;
+  background-color: #f1f1f1e6;
+  transition: 0.6s;
+
   z-index: 1;
-  display: none;
+  padding: 10px;
 }
 
-.member-box:hover .hover-img {
+/* .from-left {
+  top: 0;
+  left: -100%;
+}
+
+.card:hover .content .from-left {
+  left: 0%;
+} */
+
+.back {
+  top: 100%;
+  left: 0;
+}
+
+.card:hover .content .back {
+  top: 0%;
+}
+
+/* .from-right {
+  top: 0%;
+  right: -100%;
+}
+
+.card:hover .content .from-right {
+  right: 0;
+} */
+
+.card .content .back h3 {
+  font-size: 15px;
+  letter-spacing: 2px;
+}
+
+.card .content .back .tem-img {
+  border-radius: 100%;
+}
+
+.card .content .back .des {
+  font-size: 13px;
+  padding: 20px 0px;
+}
+
+.card .content .back .social-icon {
+  list-style: none;
+  font-size: 30px;
+  margin: 0px;
+  padding: 0px;
+}
+
+.card .content .back .social-icon li {
+  display: inline-block;
+}
+
+.card .content .back .social-icon li a {
   display: block;
-  animation: fade 0.3s;
-}
-
-@keyframes fade {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-.member-name {
-  width: 100%;
-  padding: 20px 10px;
-  background-color: #ffffff;
-  border: 1px solid #f5f5f5;
-  z-index: 2;
-}
-
-.member-name h3,
-.member-name h5 {
-  color: #1b1b1b;
-  margin: 0px;
-  letter-spacing: 0.3px;
-  font-size: 1.17em;
-}
-
-.member-name h5 {
-  font-weight: 500;
-}
-
-.member-name h3 {
-  text-transform: uppercase;
-  font-weight: 800;
-}
-
-.team-box-container {
-  display: grid;
-  grid-template-columns: 300px 300px 300px;
-  grid-template-rows: auto auto auto;
-  grid-auto-columns: auto;
-  grid-auto-rows: auto;
-  grid-gap: 50px;
-}
-
-.member-detail-box {
-  display: grid;
-  grid-template-columns: 0.5fr 1.5fr;
-  grid-template-rows: auto;
-  grid-gap: 20px;
-  box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.2);
-}
-
-.detail-box-1,
-.detail-box-2,
-.detail-box-3,
-.detail-box-4,
-.detail-box-5,
-.detail-box-6,
-.detail-box-7,
-.detail-box-8,
-.detail-box-9,
-.detail-box-10,
-.detail-box-11,
-.detail-box-12,
-.detail-box-13,
-.detail-box-14,
-.detail-box-15,
-.detail-box-16,
-.detail-box-17,
-.detail-box-18,
-.detail-box-19,
-.detail-box-20,
-.detail-box-21,
-.detail-box-22,
-.detail-box-23,
-.detail-box-24 {
-  background: #ffffff;
-  grid-column: 1/4;
-  display: none;
-}
-
-.detail-box-img {
-  width: 300px;
-  height: auto;
-}
-
-.detail-box-img img {
-  background: #f4d8bf;
-  width: 100%;
-  height: 100%;
-  object-position: center;
-  object-fit: cover;
-}
-
-.detail-box-text {
-  padding: 20px 20px 20px 0px;
-  position: relative;
-}
-
-.detail-name {
-  font-size: 2rem;
-  color: #181818;
-  font-weight: 700;
-}
-
-.member-social-links {
-  display: flex;
-  align-items: center;
-}
-
-.member-social-links a {
-  width: 30px;
-  height: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.1);
-  margin: 5px;
-  border-radius: 50%;
-  font-size: 0.9rem;
-  color: #000000;
-}
-
-.member-social-links a:hover {
-  color: #fff;
-  background-color: #181818;
-  transition: all ease 0.3s;
-}
-
-.detail-box-text .position {
-  color: #000000;
-  border-bottom: 1px solid #414141;
-  margin: 0px;
-  padding: 10px 0px;
-  width: 97%;
-}
-
-.detail-box-text p {
-  color: #202020;
-  font-weight: 500;
-  font-size: 0.9rem;
-  padding-top: 1em;
-}
-
-.view-work-btn {
-  width: 150px;
-  height: 45px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #ffffff;
-  background-color: #202020;
-}
-
-.view-work-btn:hover,
-.cancel:hover {
-  color: #fff;
-  background-color: #0e0e0e;
-  transition: all ease 0.3s;
-}
-
-.cancel {
-  position: absolute;
-  right: 30px;
-  top: 20px;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #ffffff;
-  background-color: #202020;
-}
-
-.show-details-1,
-.show-details-2,
-.show-details-3 {
-  display: grid;
-  grid-row: 2/3;
-  animation: fade 0.3s;
-}
-
-.show-details-4,
-.show-details-5,
-.show-details-6 {
-  display: grid;
-  grid-row: 3/4;
-  animation: fade 0.3s;
-}
-
-.show-details-7,
-.show-details-8,
-.show-details-9 {
-  display: grid;
-  grid-row: 4/5;
-  animation: fade 0.3s;
-}
-
-.show-details-10,
-.show-details-11,
-.show-details-12 {
-  display: grid;
-  grid-row: 5/6;
-  animation: fade 0.3s;
-}
-
-.show-details-13,
-.show-details-14,
-.show-details-15 {
-  display: grid;
-  grid-row: 6/7;
-  animation: fade 0.3s;
-}
-
-.show-details-16,
-.show-details-17,
-.show-details-18 {
-  display: grid;
-  grid-row: 7/8;
-  animation: fade 0.3s;
-}
-
-.show-details-19,
-.show-details-20,
-.show-details-21 {
-  display: grid;
-  grid-row: 8/9;
-  animation: fade 0.3s;
-}
-
-.show-details-22,
-.show-details-23,
-.show-details-24 {
-  display: grid;
-  grid-row: 9/10;
-  animation: fade 0.3s;
-}
-
-@media(max-width:1200px) {
-  .team-box-container {
-    grid-template-columns: 303px 303px 303px;
-  }
-
-  .member-img {
-    width: 303px;
-    height: 450px;
-  }
-}
-
-@media(max-width:1156px) {
-  .milind {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 20px 305px;
-    position: relative;
-  }
-
-  .team-box-container {
-    grid-template-columns: 232px 232px 232px;
-    grid-gap: 10px;
-  }
-
-  .member-img {
-    width: 232px;
-    height: 335px;
-  }
-
-  .milind {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 305px;
-    position: relative;
-  }
-
-  .member-detail-box {
-    grid-gap: 10px;
-  }
-
-  .detail-box-text {
-    padding: 10px;
-  }
-
-  .cancel {
-    top: 10px;
-    right: 10px;
-  }
-}
-
-@media(max-width:836px) {
-  .milind {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 20px 30px;
-    position: relative;
-  }
-
-  .team-box-container {
-    grid-template-columns: 340px 340px;
-  }
-
-  .member-img {
-    width: 340px;
-    height: 510px;
-  }
-
-  .show-details-1,
-  .show-details-2 {
-    display: grid;
-    grid-row: 2/3;
-    grid-column: 1/3;
-  }
-
-  .show-details-3,
-  .show-details-4 {
-    display: grid;
-    grid-row: 3/4;
-    grid-column: 1/3;
-  }
-
-  .show-details-5,
-  .show-details-6 {
-    display: grid;
-    grid-row: 4/5;
-    grid-column: 1/3;
-  }
-
-  .show-details-7,
-  .show-details-8 {
-    display: grid;
-    grid-row: 5/6;
-    grid-column: 1/3;
-  }
-
-  .show-details-9,
-  .show-details-10 {
-    display: grid;
-    grid-row: 6/7;
-    grid-column: 1/3;
-  }
-
-  .show-details-11,
-  .show-details-12 {
-    display: grid;
-    grid-row: 7/8;
-    grid-column: 1/3;
-  }
-
-  .show-details-13,
-  .show-details-14 {
-    display: grid;
-    grid-row: 8/9;
-    grid-column: 1/3;
-  }
-
-  .show-details-15,
-  .show-details-16 {
-    display: grid;
-    grid-row: 9/10;
-    grid-column: 1/3;
-  }
-
-  .show-details-17,
-  .show-details-18 {
-    display: grid;
-    grid-row: 10/11;
-    grid-column: 1/3;
-  }
-
-  .show-details-19,
-  .show-details-20 {
-    display: grid;
-    grid-row: 11/12;
-    grid-column: 1/3;
-  }
-
-  .show-details-21,
-  .show-details-22 {
-    display: grid;
-    grid-row: 12/13;
-    grid-column: 1/3;
-  }
-
-  .show-details-23,
-  .show-details-24 {
-    display: grid;
-    grid-row: 13/14;
-    grid-column: 1/3;
-  }
-
-}
-
-@media(max-width:800px) {
-  .team-box-container {
-    grid-template-columns: 250px 250px;
-  }
-
-  .member-img {
-    width: 250px;
-    height: 375px;
-  }
-
-  .milind {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 20px 305px;
-    position: relative;
-  }
-
-  .member-detail-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 0px;
-    position: relative;
-  }
-
-  .detail-box-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    position: static;
-  }
-}
-
-@media(max-width:590px) {
-  .team-box-container {
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 10px;
-  }
-
-  .member-img {
-    width: 100%;
-    height: 355px;
-  }
-
-  #team {
-    padding: 10px;
-  }
-
-  .team-heading {
-    font-size: 1.7rem;
-  }
-}
-
-@media(max-width:450px) {
-  .team-box-container {
-    grid-template-columns: 1fr;
-  }
-
-  .member-img {
-    height: 500px;
-  }
-
-  .show-details-1,
-  .show-details-2,
-  .show-details-3,
-  .show-details-4,
-  .show-details-5,
-  .show-details-6,
-  .show-details-7,
-  .show-details-8,
-  .show-details-9,
-  .show-details-10,
-  .show-details-11,
-  .show-details-12,
-  .show-details-13,
-  .show-details-14,
-  .show-details-15,
-  .show-details-16,
-  .show-details-17,
-  .show-details-18,
-  .show-details-19,
-  .show-details-20,
-  .show-details-21,
-  .show-details-22,
-  .show-details-23,
-  .show-details-24 {
-    grid-column: 1/2;
-  }
-
-  .show-details-1 {
-    grid-row: 2/3;
-  }
-
-  .show-details-2 {
-    grid-row: 3/4;
-  }
-
-  .show-details-3 {
-    grid-row: 4/5;
-  }
-
-  .show-details-4 {
-    grid-row: 5/6;
-  }
-
-  .show-details-5 {
-    grid-row: 6/7;
-  }
-
-  .show-details-6 {
-    grid-row: 7/8;
-  }
-
-  .show-details-7 {
-    grid-row: 8/9;
-  }
-
-  .show-details-8 {
-    grid-row: 9/10;
-  }
-
-  .show-details-9 {
-    grid-row: 10/11;
-  }
-
-  .show-details-10 {
-    grid-row: 11/12;
-  }
-
-  .show-details-11 {
-    grid-row: 12/13;
-  }
-
-  .show-details-12 {
-    grid-row: 13/14;
-  }
-
-  .show-details-13 {
-    grid-row: 14/15;
-  }
-
-  .show-details-14 {
-    grid-row: 15/16;
-  }
-
-  .show-details-15 {
-    grid-row: 16/17;
-  }
-
-  .show-details-16 {
-    grid-row: 17/18;
-  }
-
-  .show-details-17 {
-    grid-row: 18/19;
-  }
-
-  .show-details-18 {
-    grid-row: 19/20;
-  }
-
-  .show-details-19 {
-    grid-row: 20/21;
-  }
-
-  .show-details-20 {
-    grid-row: 21/22;
-  }
-
-  .show-details-21 {
-    grid-row: 22/23;
-  }
-
-  .show-details-22 {
-    grid-row: 23/24;
-  }
-
-  .show-details-23 {
-    grid-row: 24/25;
-  }
-
-  .show-details-24 {
-    grid-row: 25/26;
-  }
+  /* background: ; */
+  color: #333;
+  /* width: 40px;
+  height: 40px; */
+  text-align: center;
+  line-height: 40px;
+  /* border-radius: 100%; */
 }
