--- a/foodfiesta/style.css
+++ b/foodfiesta/style.css
@@ -583,157 +583,65 @@ justify-content: center;
    }
 }
 **/
-
 .Winner{
-  display:flow-root;
-  height: 130vh;
-  place-items: center;
-  background: maroon;
-  text-align: center;
-  margin-bottom: 0px;
-}
-.Winner .title{
-  margin-top: 70px;
-  margin-bottom: 1px;
-  font-size: 80px;
-  color: #fff;
+  padding: 100px 50px;
+  background-color: maroon;
 }
 
-.container{
-  padding: 0 10px;
+.Winner h1{
+  color: white;
+}
+
+.winner-container{
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  gap: 40px;
+  justify-content: center;
 }
 .card{
-  height: 280px;
-  max-width: 350px;
-  margin: 0 20px;
-  background: #fff;
-  transition: 0.5s;
-  
+  width: 300px;
 }
-.card:hover{
-  height: 470px;
-  background-color: #000;
-  
+
+.card:hover .bottom-text{
+display: block;
 }
-.card .img{
+.card img{
+  width: 100%;
   height: 350px;
-  width: 100%;
+ object-fit: cover;
+
 }
-.card .img img{
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
+
+.top-text{
+  padding: 10px 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+width: 100%;
 }
-.card .top-text{
-  padding: 5px;
-}
-.card .top-text .name{
+
+.name{
   font-size: 25px;
   font-weight: 600;
   color: white;
 }
-.card .top-text p{
-  font-size: 20px;
-  font-weight: 600;
-  color: rgb(204, 194, 57);
-  line-height: 20px;
-}
-.card .bottom-text{
-  padding: 0 20px 10px 20px;
-  margin-top: 5px;
-  background: #fff;
-  border-radius: 5%;
-  opacity: 0;
-  visibility: hidden;
-  transition: 0.5s;
-}
-.card:hover .bottom-text{
-  opacity: 1;
-  visibility: visible;
-}
-.card .bottom-text .text{
-  text-align: justify;
-}
-.card .bottom-text .btn{
-  margin: 10px 0;
-  text-align: left;
+
+.bottom-text{
+  display: none;
 }
 
 
-@media screen and (max-width: 1200px) {
-  .Winner{
-    height: 150vh;}
-  
-  .container{
-    margin-top: 0%;
-    flex-wrap:wrap;
-    flex-direction:row;
+@media screen and (max-width: 900px) {
+  .winner-container{
+    display: flex;
+    gap: 40px;
+    justify-content: center;
+    flex-direction: column;
     align-items: center;
-  justify-content: space-between;
   }
-
-
-  .card{
-    max-width: 300px;
-    margin: 100px 0;
-  }
-}
-
-@media screen and (max-width: 990px) {
-  .Winner{
-    height: 300vh;}
   
-  .container{
-    margin-top: 0%;
-    flex-wrap: wrap;
-    flex-direction:column;
-  }
-
-
-  .card{
-    height: 280px;
-    max-width: 300px;
-    margin: 80px 0;
-  }
-
-
 }
-@media screen and (max-width: 475px) {
-  .Winner{
-    height: 330vh;}
-  
-  .container{
-    margin-top: 0%;
-    flex-wrap: wrap;
-    flex-direction: column;
-  }
 
 
-  .card{
-    max-width: 300px;
-    margin: 100px 0;
-  }
-}
-@media screen and (max-width: 325px) {
-  .Winner{
-    height: 345vh;}
-  
-  .container{
-    margin-top: 0%;
-    flex-wrap: wrap;
-    flex-direction: column;
-  }
-
-
-  .card{
-    max-width: 300px;
-    margin: 100px 0;
-  }
- 
-}
 /** Gallery **/
 
 .Gallery h1{
