--- a/team/css/style.css
+++ b/team/css/style.css
@@ -156,7 +156,7 @@ section {
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   width: 90%;
   height: auto;
@@ -178,31 +178,16 @@ section {
 
 }
 
-.container {
-  width: 900px;
-  margin: 0px auto;
+.team-box-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-left: 50px;
+  margin-top: 50px;
+  margin-right: 50px;
+  gap: 10px;
 }
 
-/* Float three columns side by side */
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 0 10px;
-}
-
-/* Remove extra left and right margins, due to padding */
-.row {
-  margin: 20px -5px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive columns */
 @media screen and (max-width: 700px) {
 
   .container {
@@ -218,8 +203,9 @@ section {
 
 /* Style the counter cards */
 .card {
+  margin: 15px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 5px;
+  padding: 15px;
   text-align: center;
   background-color: #fff;
   border-radius: 10px;
