--- a/foodfiesta/asset/css/style.css
+++ b/foodfiesta/asset/css/style.css
@@ -1,37 +1,31 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-  
-}
-
-html{
-  scroll-behavior: smooth;
-  }
 
 body , html {
   overflow-x: hidden;
   overflow-y:auto;
 }
 
-::-webkit-scrollbar-track {
-  background-color: #ffffff;
+/* only overriding colors of nav bar here  */
+nav{
+  position: fixed;
+  background-color: maroon;
+}
+nav .icon-burger .line {
+  background-color: white;
 }
 
-::-webkit-scrollbar {
-  width: 10px;
-  background-color: #f5f5f5;
+nav .links a {
+  color: white;
 }
 
-::-webkit-scrollbar-thumb {
-  background-color: #c9c8c8;
-  border-radius: 1rem;
+@media screen and (max-width: 900px) {
+  nav .links {
+    background-color: white;
+  }
+  nav .links a {
+    color: maroon;
+  }
 }
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: #b3b2b2;
-}
+/* nav bar ends  */
 
 .hero{
   width: 100%;
@@ -41,133 +35,6 @@ body , html {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-body {
-	padding: 0;
-	margin: 0;
-}
-.container {
-	position: relative;
-	margin-top: 100px;
-}
-.container img {
-	display: block;
-	width: 100%;
-}
-
-
-nav {
-	position: fixed;
-	z-index: 10;
-	left: 0;
-	right: 0;
-	top: 0;
-	padding: 0 5%;
-	height: 70px;
-	background-color: rgba(114, 11, 11, 0.837);
-}
-nav .logo {
-	float: left;
-	width: 94px;
-	display: flex;
-	align-items: center;
-}
-nav .logo1 {
-	float: left;
-  margin-top: 5px;
-	width: 60px;
-	display: flex;
-	align-items: center;
-}
-
-nav .links {
-	float: right;
-	padding: 0;
-	margin: 0;
-	height: 100%;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-}
-nav .links li {
-	list-style: none;
-}
-nav .links a {
-	display: block;
-	padding: 1em;
-	font-size: 16px;
-	font-weight: bold;
-	color: #fff;
-	text-decoration: none;
-  
-}
-
-nav .links a:hover {
-  opacity: 0.7;
-}
-
-#nav-toggle {
-	position: absolute;
-	top: -100px;
-}
-nav .icon-burger {
-	display: none;
-	position: absolute;
-	right: 5%;
-	top: 50%;
-	transform: translateY(-50%);
-}
-nav .icon-burger .line {
-	width: 30px;
-	height: 5px;
-	background-color: #fff;
-	margin: 5px;
-	border-radius: 3px;
-	transition: all .3s ease-in-out;
-}
-@media screen and (max-width: 830px) {
-	nav .links {
-		float: none;
-		position: fixed;
-		z-index: 9;
-		left: 0;
-		right: 0;
-		top: 69.9px;
-		bottom: 100%;
-    position: fixed;
-		width: auto;
-		height: auto;
-		flex-direction: column;
-		justify-content: space-evenly;
-		background-color: rgba(114, 11, 11, 0.837);
-		overflow: hidden;
-		box-sizing: border-box;
-		transition: all .5s ease-in-out;
-	}
-
-	nav .links a {
-		font-size: 20px;
-	}
-	nav :checked ~ .links {
-		bottom: 0;
-	}
-	nav .icon-burger {
-		display: block;
-	}
-  nav .logo1 {
-    display: none;
-  }
-	nav :checked ~ .icon-burger .line:nth-child(1) {
-		transform: translateY(10px) rotate(225deg);
-	}
-	nav :checked ~ .icon-burger .line:nth-child(3) {
-		transform: translateY(-10px) rotate(-225deg);
-	}
-	nav :checked ~ .icon-burger .line:nth-child(2) {
-		opacity: 0;
-	}
-
 }
 
 /** Home **/ 
@@ -229,9 +96,7 @@ nav .icon-burger .line {
   max-width: 100%;
   height: auto;
   padding: 0 10px;
-  border-style:ridge;
   border-radius: 100px;
-  border-color: brown;
 }
 .all-text{
   width: 600px;
@@ -614,7 +479,7 @@ justify-content: center;
 }
 
 .Winner h1{
-  color: rgba(255, 238, 7, 0.877);
+  color: rgb(255, 255, 255);
   margin-bottom: 40px;
 }
 
@@ -623,15 +488,15 @@ justify-content: center;
   gap: 40px;
   justify-content: center;
 }
-.card{
+.winner-card{
   width: 300px;
 }
 
-.card:hover .bottom-text{
+.winner-card:hover .bottom-text{
 display: block;
 
 }
-.card img{
+.winner-card img{
   width: 100%;
   height: 350px;
  object-fit: cover;
@@ -899,3 +764,50 @@ width: 100%;
 .lightbox .spinner {
   display: none;
 }
+
+/* only overriding footer color here   */
+
+.footer-wrapper{
+  background-color: maroon;
+}
+
+
+.footer-wrapper h1{
+ color: white;
+}
+
+.contact-card h4{
+  color: white;
+}
+
+.email-area i{
+ color: white;
+}
+
+.email-area a{
+  color: white !important;    
+ }
+
+
+ .phone-area i{
+  color: white;
+ }
+ 
+ .phone-area p{
+   color: white !important;    
+  }
+ 
+  .footer-ecell{
+    background-color: white;
+  }
+ 
+  .footer-ecell a{
+   color: maroon;
+  }
+
+  .footer-ecell h5{
+    color: maroon;
+  }
+ 
+
+  /* footer css ends  */
