--- a/team/css/style.css
+++ b/team/css/style.css
@@ -175,25 +175,20 @@ section {
   border-top: 3px solid black;
   border-bottom: 3px solid black;
   text-align: center;
-
 }
 .faculty{
+  margin: 50px;
   justify-content: center;
-}
-.descbox{
-  margin-right: 25%;
-  margin-left: 25%;
-  align-content: center;
-  display: flex;
-  padding: 20px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.6s;
 }
-.descbox .milindsir{
-  
-} 
-.descbox:hover{
+.millind{
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.faculty:hover{
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
@@ -206,8 +201,9 @@ section {
 
 .team-box-container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin-left: 50px;
   margin-top: 50px;
   margin-right: 50px;
@@ -219,18 +215,40 @@ section {
   .container {
     width: 100%;
   }
-
-  .column {
-    width: 100%;
-    display: block;
-    margin-bottom: 20px;
-  }
 }
-
+.team-head {
+  font-size: 2.2rem;
+  padding: 10px 20px;
+  margin: 20px;
+  color: black;
+  text-transform: uppercase;
+  font-weight: 800;
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
+  text-align: center;
+}
+.core-members{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-left: 50px;
+  margin-top: 50px;
+  margin-right: 50px;
+  gap: 10px;
+}
+.members{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-left: 50px;
+  margin-top: 50px;
+  margin-right: 50px;
+  gap: 10px;
+}
 /* Style the counter cards */
 .card {
   margin: 15px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 15px;
   text-align: center;
   background-color: #fff;
@@ -243,7 +261,9 @@ section {
   transition: 0.5s;
   background-color: #A0E7E5;
 }
+
 .card:hover .profile {
+  transform: translateY(-50px);
   transform: scale(1.2);
   border-top-right-radius: 50px;
   border-top-left-radius: 50px;
@@ -307,6 +327,81 @@ section {
 .card .content .back .social-icon li a {
   display: block;
   /* background: ; */
+  color: #333;
+  /* width: 40px;
+  height: 40px; */
+  text-align: center;
+  line-height: 40px;
+  /* border-radius: 100%; */
+}
+
+.mcard {
+  margin: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 15px;
+  text-align: center;
+  background-color: #fff;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.mcard .profile {
+  border-radius: 10px;
+  transition: 0.5s;
+  background-color: #A0E7E5;
+}
+
+.mcard .content {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.mcard .content .back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #f1f1f1e6;
+  transition: 0.3s;
+  border-radius: 10px;
+  z-index: 1;
+  padding: 10px;
+}
+
+.mcard:hover{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  transition: 0.3s;
+}
+
+.mcard .content h3 {
+  font-size: 15px;
+  letter-spacing: 2px;
+}
+
+.mcard .content .tem-img {
+  border-radius: 100%;
+}
+
+.mcard .content .des {
+  font-size: 13px;
+  padding: 20px 0px;
+}
+
+.mcard .content .social-icon {
+  list-style: none;
+  font-size: 30px;
+  margin: 0px;
+  padding: 0px;
+}
+
+.mcard .content .social-icon li {
+  display: inline-block;
+}
+
+.mcard .content .social-icon li a {
+  display: block;
+    /* background: ; */
   color: #333;
   /* width: 40px;
   height: 40px; */
