--- a/foodfiesta/asset/css/style.css
+++ b/foodfiesta/asset/css/style.css
@@ -455,6 +455,120 @@ justify-content: center;
    }
 }
 **/
+
+.win{
+  background-color: maroon;
+}
+
+.win .flex{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.win .inner{
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+
+
+.win .container{
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.heading {
+  width: 100%;
+  padding-top: 80px;
+}
+
+.heading h2{
+  font-size: 60px;
+  color: rgba(255, 238, 7, 0.877);
+}
+
+.winners-wrap{
+  width: 22%;
+  margin-top: 80px;
+}
+
+.winners-img img{
+    -webkit-transition: all .2s ease-in-out;
+    overflow: hidden;
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+
+.winners-member, .winners-img{
+  position: relative;
+  overflow: hidden;
+}
+
+.winners-title{
+  margin: 30px 0 7px;
+  font-size:25px;
+  background-color: rgb(0, 0, 0);
+  color: #fff;
+}
+
+.award{
+  font-size: 20px;
+  color: rgba(255, 238, 7, 0.877);
+}
+.overlay{
+  background-color: rgba(20,20,20,0.7);
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  -webkit-transition: all .2s ease-in-out;
+}
+
+.winners-details{
+  opacity: 0;
+  position: absolute;
+  top: 40%;
+  left: 0;
+  padding: 5%;
+  overflow: hidden;
+  width: 100%;
+  z-index: 2;
+  -webkit-transition: all .2s ease-in-out;
+}
+
+.winners-details p{
+  color: #fff;
+  font-size: 15px;
+}
+
+.winners-img:hover .winners-details{
+  opacity: 1;
+  margin-top: -80px;
+}
+
+.winners-img:hover .overlay{
+  opacity: 1;
+}
+
+@media screen and (max-width:1200px) {
+  .main-box{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .winners-wrap{
+    width: 80%;
+    height:60%;
+    margin-top: 75px;
+  }
+}
+
+/** 
 .Winner{
   padding: 100px 50px;
   background-color: maroon;
@@ -529,7 +643,7 @@ width: 100%;
   }
   
 }
-
+**/
 
 /** Gallery **/
 
