--- a/src/css/reg.css
+++ b/src/css/reg.css
@@ -1,6 +1,21 @@
+.registration{
+    background-color:rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    /* height: 50rem; */
+}
+
 .reg-title{
+    padding-top: 2em;
+    display: flex;
+    justify-content: center;
     font-size:2.5em;
     text-align: center;
+}
+
+.description{
+    width: 30em;
+    gap: 40px;
 }
 
 @media (max-width:450px) {
@@ -94,7 +109,10 @@
 
 
 @media (min-width: 640px) {
-    .blog-card {
+    .reg-title{
+        padding-top: 1em;
+    }
+    /* .blog-card {
         flex-direction: row;
         max-width: 1200px;
         min-height: 400px;
@@ -130,7 +148,7 @@
     }
     .blog-card.alt .details {
         padding-left: 25px;
-    }
+    } */
 }
 
 
