--- a/src/css/testim.css
+++ b/src/css/testim.css
@@ -10,7 +10,7 @@
   } */
 
   .testimony h1{
-    min-height: 13rem;
+    /* min-height: 2rem; */
     padding-top: 60px;
     font-size: 2.5em;
     font-weight: 600;
