--- a/foodfiesta/asset/css/style.css
+++ b/foodfiesta/asset/css/style.css
@@ -517,14 +517,16 @@ justify-content: center;
 }
 
 .winners-title{
-  margin: 30px 0 7px;
+  margin: 0px 8 7px;
   font-size:25px;
+  padding: 8px;
   background-color: rgb(0, 0, 0);
   color: #fff;
 }
 
 .award{
   font-size: 20px;
+  line-height: 8px;
   color: rgba(255, 238, 7, 0.877);
 }
 .overlay{
@@ -569,6 +571,10 @@ justify-content: center;
     flex-direction: column;
   }
 
+  .win .flex{
+    align-items: center;
+  }
+  
   
 }
 
@@ -578,6 +584,9 @@ justify-content: center;
     flex-direction: column;
   }
 
+  .win .flex{
+    align-items: center;
+  }
 }
 
 /** 
