--- a/projectpillar/src/css/style.css
+++ b/projectpillar/src/css/style.css
@@ -751,7 +751,7 @@ nav {
     transform: scale(0.75);
   }
 }
-@media screen and (min-width: 1000px) and (max-height: 775px) {
+@media screen and (min-width: 1000px) and (max-height: 650px) {
   .mouse {
     display: none;
   }
@@ -985,13 +985,19 @@ section:nth-of-type(4) {
 
 .hero-img {
   width: 100%;
-  height: 50vh;
+  height: 45vh;
   -o-object-fit: contain;
      object-fit: contain;
   z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media screen and (min-width: 1000px) and (max-height: 775px) {
+  .hero-img {
+    display: block;
+    height: 275px;
+  }
 }
 
 .incentives-wrapper {
@@ -1083,7 +1089,7 @@ section:nth-of-type(4) {
     padding-bottom: 50px;
   }
   .hero-img {
-    height: 350px;
+    height: 300px;
     width: 100%;
     z-index: 1;
     -o-object-fit: contain;
