--- a/projectpillar/src/css/style.scss
+++ b/projectpillar/src/css/style.scss
@@ -117,12 +117,16 @@ section:nth-of-type(4) {
 
 .hero-img {
   width: 100%;
-  height: 50vh;
+  height: 45vh;
   object-fit: contain;
   z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center;
+  @media screen and (min-width: 1000px) and (max-height: 775px) {
+    display: block;
+    height: 275px;
+  }
 }
 
 .incentives-wrapper {
@@ -222,7 +226,7 @@ section:nth-of-type(4) {
   }
 
   .hero-img {
-    height: 350px;
+    height: 300px;
     width: 100%;
     z-index: 1;
     object-fit: contain;
