--- a/team/css/style.css
+++ b/team/css/style.css
@@ -347,14 +347,17 @@ section {
   background-color: #fff;
   border-radius: 10px;
   cursor: pointer;
+  width: 275px;
 }
-
+.mcard h2{
+  font-size: 25px;
+}
 .mcard .profile {
   border-radius: 10px;
   transition: 0.5s;
   background-color: #A0E7E5;
-  width: 350px;
-  height: 500px;
+  /* width: 350px; */
+  height:400px;
   object-fit: contain;
 }
 
@@ -397,9 +400,9 @@ section {
 
 .mcard .content .social-icon {
   list-style: none;
-  font-size: 30px;
+  font-size: 25px;
   margin: 0px;
-  padding: 0px;
+  padding: 5px;
 }
 
 .mcard .content .social-icon li {
