--- a/team/css/style.css
+++ b/team/css/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -28,7 +28,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
 .flex-col {
@@ -37,7 +36,7 @@ body {
   flex-direction: row;
 }
 
-@media(max-width:745px) {
+@media (max-width: 745px) {
   .flex-col {
     flex-direction: column;
   }
@@ -73,20 +72,20 @@ section {
   opacity: 0.3;
 }
 
-.slide-bg>video,
-.slide-bg>img {
+.slide-bg > video,
+.slide-bg > img {
+  transform: translateY(20px);
   min-width: 100%;
   object-fit: cover;
 }
 
 .arrow-down {
-  width: 60px;
-  height: 100px;
-  position: absolute;
-  left: 50%;
+  position: relative;
+  margin-top: 100px;
+  margin-bottom: 200px;
+  margin-left: 45%;
   bottom: 0px;
   -webkit-animation: arrow 0.5s 1s infinite ease-out alternate;
-
 }
 
 .arrow-down:hover {
@@ -129,9 +128,9 @@ section {
   }
 }
 
-
 @-webkit-keyframes leftArrow {
-  0% {}
+  0% {
+  }
 
   100% {
     -webkit-transform: rotate(220deg);
@@ -139,14 +138,13 @@ section {
 }
 
 @-webkit-keyframes rightArrow {
-  0% {}
+  0% {
+  }
 
   100% {
     -webkit-transform: rotate(-40deg);
   }
 }
-
-
 
 #team {
   margin-left: 5%;
@@ -176,27 +174,26 @@ section {
   border-bottom: 3px solid black;
   text-align: center;
 }
-.faculty{
+.faculty {
   margin: 50px;
   justify-content: center;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.6s;
 }
-.millind{
+.millind {
   border-radius: 10px;
   padding: 10px;
 }
 
-.faculty:hover{
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+.faculty:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-.descbox .frame{
+.descbox .frame {
   position: relative;
   margin: 5px;
   padding: 5px;
-
 }
 
 .team-box-container {
@@ -211,7 +208,6 @@ section {
 }
 
 @media screen and (max-width: 700px) {
-
   .container {
     width: 100%;
   }
@@ -227,7 +223,7 @@ section {
   border-bottom: 3px solid black;
   text-align: center;
 }
-.core-members{
+.core-members {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -235,7 +231,7 @@ section {
   margin-left: 25px;
   margin-right: 25px;
 }
-.members{
+.members {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -256,7 +252,7 @@ section {
 .card .profile {
   border-radius: 10px;
   transition: 0.5s;
-  background-color: #A0E7E5;
+  background-color: #a0e7e5;
   width: 350px;
   height: 500px;
   object-fit: contain;
@@ -291,8 +287,8 @@ section {
   top: 100%;
   left: 0;
 }
-.card:hover{
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+.card:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   transition: 0.3s;
 }
 .card:hover .content .back {
@@ -345,7 +341,7 @@ section {
   cursor: pointer;
   width: 275px;
 }
-.mcard h2{
+.mcard h2 {
   font-size: 25px;
   padding: 15px;
   margin-bottom: 0px;
@@ -353,9 +349,9 @@ section {
 .mcard .profile {
   border-radius: 10px;
   transition: 0.5s;
-  background-color: #A0E7E5;
+  background-color: #a0e7e5;
   /* width: 350px; */
-  height:400px;
+  height: 400px;
   object-fit: contain;
 }
 
@@ -377,8 +373,8 @@ section {
   padding: 10px;
 }
 
-.mcard:hover{
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+.mcard:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   transition: 0.3s;
 }
 
@@ -409,7 +405,7 @@ section {
 
 .mcard .content .social-icon li a {
   display: block;
-    /* background: ; */
+  /* background: ; */
   color: #333;
   /* width: 40px;
   height: 40px; */
